<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vishal.waterreports.controller.RegisterActivity">

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:baselineAligned="false">

        <TextView
            android:text="Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="31dp"
            android:id="@+id/textView"
            android:textSize="30sp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <EditText
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Name"
            android:ems="10"
            android:id="@+id/editTextName" />

        <Spinner
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/spinnerAccountType"
            android:prompt="@string/user_type_prompt" />

        <EditText
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:hint="example@example.com"
            android:id="@+id/editTextRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_margin="15dp"
            android:inputType="textPassword"
            android:hint="Enter Your Password"
            android:id="@+id/editTextRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonRegister"
            android:text="Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:id="@+id/textViewRegisterLogin"
            android:text="Already Registered? Login Here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
